fake_twitter_docker_n_kubernetes/kubernetes/faketwitter-fpm-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fake-twitter-fpm-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fake-twitter-fpm
  template:
    metadata:
      labels:
        app: fake-twitter-fpm
    spec:
      containers:
      - name: fake-twitter-fpm
        image: docker-app-fake-twitter-fpm-image:v1
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: fake-twitter-volume
          mountPath: /var/www/html
      volumes:
      - name: fake-twitter-volume
        persistentVolumeClaim:
          claimName: fake-twitter-volume
