fake_twitter_docker_n_kubernetes/kubernetes/mariadb-deployment-not-persistance.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: docker-db-mariadb-image:v1
        ports:
        - containerPort: 3306
