fake_twitter_docker_n_kubernetes/kubernetes/fake-twitter-nginx-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: fake-twitter-nginx-nodeport
spec:
  type: NodePort
  ports:
    - name: fake-twitter-nginx
      port: 8080
      targetPort: 8080
      nodePort: 30000
  selector:
    app: fake-twitter-nginx
