fake_twitter_docker_n_kubernetes/kubernetes/faketwitter-fpm-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fake-twitter-fpm-service
spec:
  selector:
    app: fake-twitter-fpm
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
