fake_twitter_docker_n_kubernetes/kubernetes/faketwitter-nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fake-twitter-nginx-service
spec:
  selector:
    app: fake-twitter-nginx
  ports:
    - protocol: TCP
      port: 8080          # This is the port on the host
      targetPort: 8080      # This is the port on the NGINX container
