fake_twitter_docker_n_kubernetes/kubernetes/kubernetes-dasbhoard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-kong-proxy
  namespace: kubernetes-dashboard
spec:
  selector:
    app: kubernetes-dashboard
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8443
  type: ClusterIP
