fake_twitter_docker_n_kubernetes/kubernetes/kubernetes-dashboard-nodeport.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: kubernetes-dashboard-kong-proxy-nodeport
#   namespace: kubernetes-dashboard
# spec:
#   type: NodePort
#   ports:
#     - port: 443
#       targetPort: 8443
#       nodePort: 32000  # Choose a node port within the range allowed by your cluster
#   selector:
#     k8s-app: kubernetes-dashboard-kong-proxy


apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-kong-proxy
  namespace: kubernetes-dashboard
spec:
  selector:
    app: kubernetes-dashboard
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8443
    nodePort: 32000
  type: NodePort



# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     k8s-app: kubernetes-dashboard
#   name: kubernetes-dashboard
#   namespace: kubernetes-dashboard
# spec:
#   type: NodePort
#   ports:
#     - port: 443
#       targetPort: 8443
#       nodePort: 30033
#   selector:
#     k8s-app: kubernetes-dashboard
