fake_twitter_docker_n_kubernetes/kubernetes/fake-twitter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake-twitter-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fake-twitter-fpm-service
            port:
              number: 9000
